<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation"
    >
    <string name="user_name">用户组件</string>
    <string name="user_vip">VIP会员</string>

    <string name="user_enterprise">我的企业</string>
    <string name="user_dynamic">我的动态</string>
    <string name="user_get_card">收到的名片</string>
    <string name="user_visitor">最近访客</string>


    <string name="user_sex">性别</string>
    <string name="user_birthday">生日</string>
    <string name="user_city">所在城市</string>
    <string name="user_sign">个人签名</string>
    <string name="user_save">保存</string>

    <string name="user_collection">我的收藏</string>
    <string name="user_setting">设置</string>
    <string name="user_bill">我的账单</string>
    <string name="user_follow">我的关注</string>
    <string name="user_opinion">意见反馈</string>
    <string name="user_about">关注</string>
    <string name="user_fans">我的粉丝</string>
    <string name="user_look_card">我看过的卡片</string>


    <string name="user_info">个人资料</string>
    <string name="user_safe">账号安全</string>
    <string name="user_prove">用户认证</string>
    <string name="user_notice">新消息通知</string>
    <string name="user_privacy">隐私</string>
    <string name="user_cache">清理缓存</string>
    <string name="user_agreement">用户协议</string>
    <string name="user_creat_card">创建名片</string>

    <string name="user_notice_hint">通知开关</string>
    <string name="user_notice_is_search">是否可以搜索到我</string>
    <string name="user_notice_is_change">准许陌生人向我发起名片交换</string>
    <string name="user_notice_recommend_hint">准许将我推荐给他人</string>
    <string name="user_select_new_notice">接受新消息通知</string>
    <string name="user_notice_send_hint">谁可以给我发消息</string>
    <string name="user_notice_open_info">名片公开信息</string>
    <string name="user_select_open_info">选择对陌生人公开信息</string>
    <string name="user_no_see">不看TA的动态</string>
    <string name="user_no_let">不让TA看我的动态</string>
    <string name="user_select_video_notice">接收语音和视频童话邀请通知</string>
    <string name="user_dialog_content_clear_cache">您正在执行清理内存操作,请确认是否清理?</string>
    <string name="user_search_hint">用户可以通过姓名/公司/产品信息找到我(联系方式不可见)</string>
    <string name="user_dialog_warning">警告</string>

    <string name="user_bind_phone">绑定手机</string>
    <string name="user_real">身份认证</string>
    <string name="user_pwd">登录密码</string>
    <string name="user_mail">本无邮箱</string>
    <string name="user_face_switch">人脸识别</string>
    <string name="user_third_party">第三平台账号</string>

    <string name="user_edit_phone">修改手机</string>
    <string name="user_edit_pwd">修改密码</string>
    <string name="user_input_phone">更换手机</string>
    <string name="user_change_phone">更换手机</string>
    <string name="user_edit_hint">已绑定手机</string>
    <string name="user_new_pwd">新密码</string>
    <string name="user_again_pwd">确认新密码</string>
    <string name="user_bind">立即绑定</string>
    <string name="user_no_set">未设置</string>
    <string name="user_real_name">实名认证</string>

    <string name="user_real_prove_hint">为获得更好的服务，请尽快完成实名认证，完成后并点亮认证标识。</string>



    <string name="user_input_info">填写基础信息</string>
    <string name="user_examineing">审核中</string>
    <string name="user_examined">完成审核</string>


    <string name="user_card_hint">认证须知：请确保身份证照片清晰可认，严禁PS，否则将由您本人承担相应的法律后果。</string>
    <string name="user_card_positive">上传身份证正面照</string>
    <string name="user_card_back">上传身份证反面照</string>
    <string name="user_card_hold">上传手持身份证照</string>
    <string name="user_card_info">核对身份信息</string>

    <string name="user_card_name_hint">请输入真实姓名</string>
    <string name="user_card_time_hint">请输入出生日期</string>
    <string name="user_card_num_hint">请输入证件号</string>
    <string name="user_card_check">核对证件照</string>

    <string name="user_business_manage">管理我的企业</string>
    <string name="user_card_manage">名片管理</string>
    <string name="user_enterprise_info">企业信息</string>
    <string name="user_home_release">发布新动态</string>
    <string name="user_card_upload_hint">请上传ipg, gif. png格式的图片，建议图片大小不超过2MB</string>

    <string name="user_menu_edit">修改封面图</string>
    <string name="user_menu_share">分享</string>

    <string name="user_scan_apply">扫码申请</string>
    <string name="user_search_apply">搜索名片申请</string>
    <string name="user_nearby_apply">来自附近的申请</string>
    <string name="user_face_apply">通过人脸识别申请</string>
    <string name="user_look_time">查看时间</string>

    <string name="user_current_month">当前月份</string>
    <string name="user_consume">累计消费:</string>
    <string name="user_received_card">我收到的名片</string>


    <string name="user_apply_change">申请交换</string>
    <string name="user_send">发消息</string>
    <string name="user_menu_change">交换名片</string>
    <string name="user_menu_collection">取消收藏</string>
    <string name="user_about_company">本无网络科技有限公司版权所有</string>

    <string name="user_deal_name">交易名称</string>
    <string name="user_payee">收款方</string>
    <string name="user_payer">付款方</string>
    <string name="user_del_time">交易时间</string>
    <string name="user_del_num">交易号</string>
    <string name="user_del_list">交易单</string>
    <string name="user_del_address">交易地点</string>

    <string name="user_success">交易成功</string>
    <string name="user_logout">退出登录</string>
</resources>
