<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ResourceName">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_10"
        android:orientation="vertical">


        <com.benwunet.base.wdiget.NormalTitleBar
            android:id="@+id/ntb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_15"
            app:ntb_title_text="@string/user_safe"
            app:ntb_tv_left="showAndFinish" />

        <com.benwunet.base.wdiget.ItemGroupView
            android:id="@+id/igv_phone"
            android:layout_width="match_parent"
            android:layout_height="60.5dp"
            android:background="@color/black_15"
            app:itemView_leftText="@string/user_bind_phone"
            app:itemView_leftText_color="@color/white" />

        <com.benwunet.base.wdiget.ItemGroupView
            android:id="@+id/igv_real"
            android:layout_width="match_parent"
            android:layout_height="60.5dp"
            android:background="@color/black_15"
            app:itemView_rightText="去实名"
            app:itemView_leftText="@string/user_real"
            app:itemView_leftText_color="@color/white" />

        <com.benwunet.base.wdiget.ItemGroupView
            android:id="@+id/igv_pwd"
            android:layout_width="match_parent"
            android:layout_height="60.5dp"
            android:background="@color/black_15"
            app:itemView_leftText="@string/user_pwd"
            app:itemView_leftText_color="@color/white" />

        <com.benwunet.base.wdiget.ItemGroupView
            android:id="@+id/igv_mail"
            android:layout_width="match_parent"
            android:layout_height="60.5dp"
            android:background="@color/black_15"
            app:itemView_leftText="@string/user_mail"
            app:itemView_leftText_color="@color/white" />

        <com.benwunet.base.wdiget.ItemGroupView
            android:id="@+id/igv_face"
            android:layout_width="match_parent"
            android:layout_height="60.5dp"
            app:showBottomLine="false"
            app:itemView_rightText="@string/user_no_set"
            android:background="@color/black_15"
            app:itemView_leftText="@string/user_face_switch"
            app:itemView_leftText_color="@color/white" />

        <com.benwunet.base.wdiget.ItemGroupView
            android:id="@+id/igv_third"
            android:layout_width="match_parent"
            android:layout_height="60.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/black_15"
            app:itemView_leftText="@string/user_third_party"
            app:itemView_leftText_color="@color/white" />

    </LinearLayout>
</layout>