<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.user.ui.viewmodel.SettingViewModel" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_10"
            android:orientation="vertical">

            <com.benwunet.base.wdiget.NormalTitleBar
                android:id="@+id/ntb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_15"
                app:ntb_title_text="@string/user_setting"
                binding:ntb_tv_left="showAndFinish" />


            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_info"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_info"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_prove"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_prove"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_safe"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_safe"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_notice"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_notice"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_privacy"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_privacy"
                app:itemView_leftText_color="@color/white"
                app:showBottomLine="false" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_cache"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_cache"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_agreement"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_agreement"
                app:itemView_leftText_color="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignParentBottom="true"
            android:background="@color/textColorYellow"
            android:gravity="center"
            android:text="@string/user_logout"
            android:textColor="@color/black_15"
            android:textSize="18sp"
            binding:onClickCommand="@{viewModel.logoutOnClickCommand}" />
    </RelativeLayout>
</layout>