<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data></data>
    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_10"
            android:orientation="vertical">

            <com.benwunet.base.wdiget.NormalTitleBar
                android:id="@+id/ntb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_15"
                app:ntb_title_text="@string/user_privacy"
                binding:ntb_tv_left="showAndFinish" />


            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_search"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_height="99dp"
                android:background="@color/black_15"
                app:itemView_leftHintText="用户可以通过姓名/公司/产品信息找到我(联系方式不可见)"
                app:itemView_leftText="@string/user_notice_is_search"
                app:itemView_leftText_color="@color/white"
                app:showBottomLine="true"
                app:showRightArrow="false"
                app:showSlideSwitch="true" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_change"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_notice_is_change"
                app:itemView_leftText_color="@color/white"
                app:showRightArrow="false"
                app:showSlideSwitch="true" />
            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_recommend"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:background="@color/black_15"
                app:itemView_leftHintText="仅会推荐给关系网、名片夹联系人、动态圈等与你相关的人脉"
                app:itemView_leftText="@string/user_notice_recommend_hint"
                app:itemView_leftText_color="@color/white"
                app:showRightArrow="false"
                app:showBottomLine="false"
                app:showSlideSwitch="true" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_send"
                android:paddingTop="10dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:background="@color/black_15"
                app:itemView_leftHintText="选择相关角色给我发送消息"
                app:itemView_leftText="@string/user_notice_send_hint"
                app:itemView_leftText_color="@color/white"
                app:showRightArrow="true"
                app:showBottomLine="true"
                 />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_open_info"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_notice_open_info"
                app:itemView_leftText_color="@color/white"
                app:showRightArrow="true"
                app:showBottomLine="true"
                app:showSlideSwitch="false" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_no_let"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_no_let"
                app:itemView_leftText_color="@color/white"
                app:showRightArrow="true"
                app:showBottomLine="true"
                app:showSlideSwitch="false" />
            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_no_see"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_no_see"
                app:itemView_leftText_color="@color/white"
                app:showRightArrow="true"
                app:showBottomLine="true"
                app:showSlideSwitch="false" />
        </LinearLayout>
    </RelativeLayout>
</layout>