<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.benwunet.user.ui.viewmodel.SettingViewModel" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_10"
            android:orientation="vertical">

            <com.benwunet.base.wdiget.NormalTitleBar
                android:id="@+id/ntb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_15"
                app:ntb_title_text="@string/user_info"
                binding:ntb_tv_left="showAndFinish" />


            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_sex"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_sex"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_birthday"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_birthday"
                app:itemView_leftText_color="@color/white" />

            <com.benwunet.base.wdiget.ItemGroupView
                android:id="@+id/igv_city"
                android:layout_width="match_parent"
                android:layout_height="60.5dp"
                android:background="@color/black_15"
                app:itemView_leftText="@string/user_city"
                app:itemView_leftText_color="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/black_15"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/user_sign"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edit_sign"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:layout_height="150dp"
                    android:gravity="start"
                    android:text="@{viewModel.sign}"
                    android:paddingLeft="22dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/black_29"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:hint="请在此处输入个性签名"
                    android:padding="12dp"
                    android:textColorHint="@color/black_8e"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignParentBottom="true"
            android:background="@color/textColorYellow"
            android:gravity="center"
            android:text="@string/user_save"
            android:textColor="@color/black_15"
            android:textSize="18sp"
            binding:onClickCommand="@{viewModel.saveOnClickCommand}" />
    </RelativeLayout>
</layout>