<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_15"
        android:orientation="vertical">


        <com.benwunet.base.wdiget.NormalTitleBar
            android:id="@+id/ntb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_15"
            app:ntb_title_text="@string/user_edit_pwd"
            app:ntb_tv_left="showAndFinish" />

        <TextView
            android:id="@+id/tv_phone"
            style="@style/user_edit"

            android:textColor="@color/white" />

        <com.benwunet.user.ui.wdiget.SmsCodeView
            android:id="@+id/smsCodeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            />

        <EditText
            android:id="@+id/edit_pwd"
            style="@style/user_edit"
            android:hint="@string/user_new_pwd" />

        <EditText
            android:id="@+id/edit_again"
            style="@style/user_edit"
            android:hint="@string/user_again_pwd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/normal_bg_yellow10"
            android:gravity="center"
            android:text="@string/base_confirm"
            android:textColor="@color/black_15"
            android:textSize="18sp" />
    </LinearLayout>
</layout>