<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_15"
        android:orientation="vertical">


        <com.benwunet.base.wdiget.NormalTitleBar
            android:id="@+id/ntb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_15"
            app:ntb_title_text="@string/user_business_manage"
            app:ntb_tv_left="showAndFinish" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@+id/ntb"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/user_enterprise_info"
                android:textColor="@color/white"
                android:textSize="16sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_below="@+id/tv_title"
            android:layout_above="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>


        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignParentBottom="true"
            android:background="@color/textColorYellow"
            android:gravity="center"
            android:text="@string/user_save"
            android:textColor="@color/black_15"
            android:textSize="18sp"
            />
    </RelativeLayout>

</layout>