<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data></data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f7"
        android:orientation="vertical">


        <com.benwunet.base.wdiget.NormalTitleBar
            android:id="@+id/ntb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_15"
            app:ntb_title_text="@string/user_bill"
            app:ntb_tv_left="showAndFinish" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_month_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/user_current_month"
                android:textColor="@color/black_15"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_consume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_month_title"
                android:layout_alignLeft="@+id/tv_month_title"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/user_consume"
                android:textColor="@color/black_8e"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_consume"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_consume"
                android:text="￥1096"
                android:textColor="@color/black_30"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableRight="@mipmap/user_icon_down"
                android:drawablePadding="2dp"
                android:padding="15dp"
                android:text="2020年8月"
                android:textColor="@color/black_8e"
                android:textSize="16sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</layout>